updated cv, index page

--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
         <p class="text-white m-0">Here is missing a tagline to motivate (make fun of) PhD students</p>
       </div>
     </div> -->
-    <h1>News</h1>
+    <h1>Steps</h1>
       <ul class="list-styled">
-        <li>  My 2nd-authored paper <i>Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</i> got accepted by ICASSP 2020! Congrats to <a href="https://www.kimsunwoo.com/">Sun Woo</a>!
+        <li> Paper <i>Source-Aware Neural Speech Coding for Noisy Speech Compression</i> was accepted by ICASSP 2021. Thanks to Minje and my co-authors <a href="http://www.kaizhen.us/">Kai Zhen</a>,  <a href="https://scholar.google.com/citations?user=qEiN7AMAAAAJ&hl=en">Seungkwon Beack</a> [2021-02-01] </li> 
+        <li> I finished summer intern at Amazon Alex Speaker ID team. Thanks to my team for the wonderful experience. [2020-10-01] </li> 
+        <li>  My 2nd-authored paper <i>Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</i> got accepted by ICASSP 2020. Congrats to <a href="https://www.kimsunwoo.com/">Sun Woo</a>!
         </li>
         <li>  Abstract of paper <i>Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of the Scholars Today and 300 Years Ago</i>, an extension study of my master thesis, was accepted by <a href='https://dh2020.adho.org/'>DH2020</a>. 
         </li>
