--- a/resume.html
+++ b/resume.html
@@ -144,8 +144,8 @@
                     <!-- <br><em>‘ICASSP 2020’</em> -->
                     </p>
 
-                    <p><strong>Yang, H.</strong>, Beack, S. and Kim, M., 2020. Source-Aware Neural Speech Coding for Noisy Speech Compression. arXiv preprint arXiv:2008.12889.</p>
-                    <br><em>‘ICASSP 2021’</em>
+                    <p><strong>Yang, H.</strong>, Beack, S. and Kim, M., 2020. Source-Aware Neural Speech Coding for Noisy Speech Compression. arXiv preprint arXiv:2008.12889.
+                    <br><em>‘ICASSP 2021’</em></p>
 
                     <p><strong>Yang, H.</strong>, Mao, H., Li, R., Ju, C.J. and Elibol, O., 2020. Non-local convolutional neural networks (nlcnn) for speaker recognition. arXiv preprint arXiv:2011.03682.</p>
 
