--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm currently (Nov.2019) a first year graduate student in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in speech and music processing.  </p>
+        <p>I'm a graduate student in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in speech and music processing. </p>
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
@@ -183,7 +183,7 @@
   <!-- Footer -->
   <footer class="py-2 bg-warning">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Haici Yang's Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Haici Yang's Website 2021</p>
     </div>
     <!-- /.container -->
   </footer>
