--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm a graduate student in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in speech and music processing. </p>
+        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> I was classically trained in piano and erhu, with performing experience in the traditional ensemble for 5+ years. My interest lies on applying machine learning methods in speech and music processing. 
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
@@ -122,7 +122,7 @@
         <p class="text-white m-0">Here is missing a tagline to motivate (make fun of) PhD students</p>
       </div>
     </div> -->
-    <h1>Steps</h1>
+    <!-- <h1>Steps</h1>
       <ul class="list-styled">
         <li> Paper <i>Source-Aware Neural Speech Coding for Noisy Speech Compression</i> was accepted by ICASSP 2021. Thanks to Minje and my co-authors <a href="http://www.kaizhen.us/">Kai Zhen</a>,  <a href="https://scholar.google.com/citations?user=qEiN7AMAAAAJ&hl=en">Seungkwon Beack</a> [2021-02-01] </li> 
         <li> I finished summer intern at Amazon Alex Speaker ID team. Thanks to my team for the wonderful experience. [2020-10-01] </li> 
@@ -132,7 +132,7 @@
         </li>
 
       </ul>
-
+ -->
       <br>
       <br>
     <!-- Content Row -->
