--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
         <nav class="nav d-flex justify-content-between">
           <a class="p-2 text-muted" href="index.html"><h4>Haici Yang</h4></a>
           <a class="p-2 text-muted" href="researches.html">Research</a>
-          <a class="p-2 text-muted" href="resume.html"><strong>Resume</strong></a>
+          <a class="p-2 text-muted" href="haici_yang_CV.pdf"><strong>Resume</strong></a>
           <!-- <a class="p-2 text-muted" href="blog.html">Blog</a> -->
 
         </nav>
@@ -136,20 +136,27 @@
                   </li>
                 </ul>
               <h4 id="list-item-2">Publications</h4>
-               <ul>
+               <!-- <ul> -->
                 <!-- <li> -->
                   <h5 class="font-italic">Conference Papers</h5>
                     <ul>
-                    <p>Kim, Sunwoo, <strong>Haici Yang</strong>, and Minje Kim. "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation." ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2020.</p>
+                    <p>[C-1] Kim, Sunwoo, <strong>Haici Yang</strong>, and Minje Kim. "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation." ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2020.
+                    <br><em>‘Nomination of Best Student Paper Award’</em></p>
                     <!-- <br><em>‘ICASSP 2020’</em> -->
                     </p>
 
-                    <p><strong>Yang, H.</strong>, Beack, S. and Kim, M., 2020. Source-Aware Neural Speech Coding for Noisy Speech Compression. arXiv preprint arXiv:2008.12889.
-                    <br><em>‘ICASSP 2021’</em></p>
+                    <p>[C-2] H. Yang, K. Zhen, S. Beack and M. Kim, "Source-Aware Neural Speech Coding for Noisy Speech Compression," ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2021 </p>
 
-                    <p><strong>Yang, H.</strong>, Mao, H., Li, R., Ju, C.J. and Elibol, O., 2020. Non-local convolutional neural networks (nlcnn) for speaker recognition. arXiv preprint arXiv:2011.03682.</p>
+                    <p>[C-3] H. Yang, S. Firodiya, N.J. Bryan, M. Kim, Don’t Separate, Learn to Remix: End-to-End Neural Remixing with Joint Optimization. arXiv preprint arXiv: 2107.13634. 
+                    <br><em>‘Submitted to ICASSP 2022’</em></p>
 
-                    <p> Zhang, Liyuan; Wang, Jun; <strong>Yang, Haici</strong>. Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of Scholars Today and 300 Years Ago. 
+                    <p>[C-4] H. Yang, S. Wager, S. Russell, M. Luo, M. Kim, W. Kim. Upmixing via Style Transfer: A Variational Autoencoder for Disentangling Spatial Images and Musical Content.  
+                    <br><em>‘Submitted to ICASSP 2022’</em></p>
+
+
+                    <p>[C-5] <strong>Yang, H.</strong>, Mao, H., Li, R., Ju, C.J. and Elibol, O., 2020. Non-local convolutional neural networks (nlcnn) for speaker recognition. arXiv preprint arXiv:2011.03682.</p>
+
+                    <p>[C-6] Zhang, Liyuan; Wang, Jun; <strong>Yang, Haici</strong>. Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of Scholars Today and 300 Years Ago. 
                     <br><em>‘Digital Humanities 2020’</em>
                     </p>
                   </ul>
@@ -157,22 +164,22 @@
                   <!-- <h5 class="font-italic">Conference Papers in Review</h5> -->
                     <ul>
                     <p>
-                      Börner K, et al. (2020) Mapping the co-evolution of artificial intelligence, robotics, and the internet of things over 20 years (1998-2017). PLoS ONE 15(12): e0242984. https://doi.org/10.1371/journal.pone.0242984
+                      [J-1] Börner K, et al. (2020) Mapping the co-evolution of artificial intelligence, robotics, and the internet of things over 20 years (1998-2017). PLoS ONE 15(12): e0242984. https://doi.org/10.1371/journal.pone.0242984
                     </p>
                     </ul>
 
                   <h5 class="font-italic"> Domestic Publications (in Chinese)</h5>
                   <ul>
-                    <p><strong>Haici Yang.</strong> “Network Extraction and Analysis on SongYuanXueAn -- Word   Embedding Application on Chinese Traditional Text”. Peking University. 2019 </p>
+                    <p>[JC-1] <strong>Haici Yang.</strong> “Network Extraction and Analysis on SongYuanXueAn -- Word   Embedding Application on Chinese Traditional Text”. Peking University. 2019 </p>
                   </ul>
                 <!-- </li> -->
                   <ul>
-                    <p><strong>Haici Yang</strong>, Jun Wang. “Construction and Visualization of Knowledge Graph on Academic Relationships among People in Song Dynasty”. Data Analysis and Knowledge Discovery, vol. 3, no. 6, 2019, pp. 109-116. (<a href ="kvlab.org/cbdb_kg">Demo<a>) </p>
-                    <p><strong>Haici Yang</strong>, Yuzhen Sang, Shenglong Han. “Research on the Interaction Mechanism Between Urbanization and Digital Divide”. Library Tribune, vol. 7, 2019, pp. 34-41. </p>
-                    <p>Jian Jin, <strong>Haici Yang</strong>. “A Topic Relevance Aware Model for Reviewer Recommendation”, Digital Library Forum, vol. 4, 2017, pp. 47-55. </p>
+                    <p>[JC-2] <strong>Haici Yang</strong>, Jun Wang. “Construction and Visualization of Knowledge Graph on Academic Relationships among People in Song Dynasty”. Data Analysis and Knowledge Discovery, vol. 3, no. 6, 2019, pp. 109-116. (<a href ="kvlab.org/cbdb_kg">Demo<a>) </p>
+                    <p>[JC-3] <strong>Haici Yang</strong>, Yuzhen Sang, Shenglong Han. “Research on the Interaction Mechanism Between Urbanization and Digital Divide”. Library Tribune, vol. 7, 2019, pp. 34-41. </p>
+                    <p>[JC-4] Jian Jin, <strong>Haici Yang</strong>. “A Topic Relevance Aware Model for Reviewer Recommendation”, Digital Library Forum, vol. 4, 2017, pp. 47-55. </p>
                   </ul>
                   
-               </ul>
+               <!-- </ul> -->
                <br>
               <h4 id="list-item-3">Work Experience</h4><br>
                  <ul>     
@@ -190,7 +197,11 @@
                       Bloomington, IN • Jan. 2020 - Current
                       <ul>
                       	<li> Supervisor: Minje Kim </li>
-                        <li> Project: Neural Audio Coding </li>
+                        <li> Project1: Source-aware neural codec targeting on the mixture signal coding problem.  </li>
+• Project1: 
+• Project2: End-to-end music remixing model that jointly optimizes remixing and source separation tasks.
+• Project3: Low-latency generative neural codec.
+
                       </ul>
                     <br>
                   
