--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		    <nav class="nav d-flex justify-content-between">
 		      <a class="p-2 text-muted" href="#"><h4>Haici Yang</h4></a>
 		      <a class="p-2 text-muted" href="researches.html">Research</a>
-		      <a class="p-2 text-muted" href="resume.html">Resume</a>
+		      <a class="p-2 text-muted" href="haici_yang_CV.pdf">Resume</a>
 		      <!-- <a class="p-2 text-muted" href="blog.html">Blog</a> -->
 
 		    </nav>
@@ -103,13 +103,19 @@
     <div class="row align-items-center my-5">
       <div class="col-lg-4">
         <img class="img-fluid rounded mb-4 mb-lg-0" src="homepic.jpg" alt="">
+        <div class="p-4 mb-3 bg-light rounded">
+              <h5 class="font-italic">Contact</h5>
+              <p>700 N. Woodlawn Ave. Luddy Hall, Bloomington, Indiana, 47408.
+              <br>hy17 at iu dot edu</p>
+            </div>
       </div>
       <!-- /.col-lg-8 -->
       <div class="col-lg-7">
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> I was classically trained in piano and erhu, with performing experience in the traditional ensemble for 5+ years. My interest lies on applying machine learning methods in speech and music processing. 
+        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> I was classically trained in piano and erhu, with performing experience in the traditional ensemble for 5+ years. My research interest mianly lies in understanding high-dimensional audio data with simpler representation and designing effiecient machine learning model for solving the audio related problems. 
+        <p> (Last updated 11/20/2021)
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
