--- a/researches.html
+++ b/researches.html
@@ -111,7 +111,7 @@
                 <strong class="d-inline-block mb-2 text-warning">Audio Coding. Generative model</strong>
                 <h3 class="mb-0">Generative Predictive Codec</h3>
                 <div class="mb-1 text-muted">Ongoing </div>
-                <p class="card-text mb-auto">The intuition of the coding problem is to target the use case where source speech is observed as a mixture with background sound. It is to address the common situations, where people would like to know the environmental status of the speaker, even though they still pay the most attention to the speech content.</p>
+                <p class="card-text mb-auto">We are working on a generative predictive codec with low bitrate and low latency.</p>
                 <!-- <a href="#" class="stretched-link">More</a> --> 
               </div>
             </div>
@@ -121,14 +121,14 @@
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2 text-success">Source Separation</strong>
-                <h3 class="mb-0">DON’T SEPARATE, LEARN TO REMIX: END-TO-END NEURAL REMIXING WITH JOINT OPTIMIZATION</h3>
+                <h3 class="mb-0">Don't Separate, Learn to Remix: End-to-end Neural Remixing with Joint Optimization</h3>
                 <div class="mb-1 text-muted">Oct.2021 </div>
 
                 <p class="card-text mb-auto">The task of manipulating the level and/or effects of individual instruments to recompose a mixture of recordings, or remixing, is common across a variety of applications. This process, however, traditionally requires access to individual source recordings, restricting the creative process. Source separation algorithms can separate a mixture into its respective components, which a user can adjust the levels and mix them back together. This two-step approach, however, still suffers from audible artifacts and motivates further work. In this work, we learn to remix music directly by re-purposing Conv-TasNet, a well-known source separation model, into two neural remixing architectures. We explicit a loss term that directly measures remix quality and jointly optimize it with a separation loss.
                 </p>
                 <br>
                 <img class="bd-placeholder-img" width="80%" height="80%" src="figs/remix.png" alt="">
-                <p><a href="https://arxiv.org/abs/2008.12889">[Paper]</a><a href="https://www.github.com/haiciyang/Remixing">[Code]</a><a href="https://saige.sice.indiana.edu/research-projects/remixing/">[Demo]  </a></p>
+                <p><a href="https://arxiv.org/abs/2107.13634">[Paper]</a><a href="https://www.github.com/haiciyang/Remixing">[Code]</a><a href="https://saige.sice.indiana.edu/research-projects/remixing/">[Demo]  </a></p>
                 <!-- <a href="#" class="stretched-link">More</a> --> 
               </div>
             </div>
@@ -179,10 +179,10 @@ Disentangling Spatial Images and Musical Content</h3>
                 <h3 class="mb-0">Non-local Convolutional Neural Network for Speaker Recognition</h3>
                 <div class="mb-1 text-muted">Summer 2022 internship project</div>
 
-                <p class="card-text mb-auto">The intuition of the coding problem is to target the use case where source speech is observed as a mixture with background sound. It is to address the common situations, where people would like to know the environmental status of the speaker, even though they still pay the most attention to the speech content.
+                <p class="card-text mb-auto"> In the past few years, various convolutional neural network (CNN) based speaker recognition algorithms have been proposed and achieved satisfactory performance. However, convolutional operations are building blocks that typically perform on a local neighborhood at a time and thus miss to capturing global, long-range interactions at the feature level which are critical for understanding the pattern in a speaker’s voice. In this work, we propose to apply Non-local Convolutional Neural Networks (NLCNN) to improve the capability of capturing long-range dependencies at the feature level, therefore improving speaker recognition performance. 
                 </p>
                 <br>
-                <p><a href="https://arxiv.org/abs/2008.12889">[Paper]</a></p>
+                <p><a href="https://arxiv.org/pdf/2011.03682">[Paper]</a></p>
                 <!-- <a href="#" class="stretched-link">More</a> --> 
               </div>
             </div>
