--- a/researches.html
+++ b/researches.html
@@ -108,7 +108,12 @@
         <div class="col-md-12">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-warning">Audio Coding. Generative model</strong>
+                <p class="d-inline-block mb-2"><strong class="text-warning"> Audio Coding  </strong> & <strong class="text-primary">Generative Model</strong></p>
+                <!-- <ul class="list-inline d-inline-block mb-2">
+				  <li class="list-inline-item  text-warning"><b>Audio coding</b></li>
+				  <li class="list-inline-item">And another one.</li>
+				  <li class="list-inline-item">But they're displayed inline.</li>
+				</ul> -->
                 <h3 class="mb-0">Generative Predictive Codec</h3>
                 <div class="mb-1 text-muted">Ongoing </div>
                 <p class="card-text mb-auto">We are working on a generative predictive codec with low bitrate and low latency.</p>
@@ -121,7 +126,7 @@
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2 text-success">Source Separation</strong>
-                <h3 class="mb-0">Don't Separate, Learn to Remix: End-to-end Neural Remixing with Joint Optimization</h3>
+                <h3 class="mb-0"><a href="https://arxiv.org/abs/2107.13634" class="text-dark">Don't Separate, Learn to Remix: End-to-end Neural Remixing with Joint Optimization</a></h3>
                 <div class="mb-1 text-muted">Oct.2021 </div>
 
                 <p class="card-text mb-auto">The task of manipulating the level and/or effects of individual instruments to recompose a mixture of recordings, or remixing, is common across a variety of applications. This process, however, traditionally requires access to individual source recordings, restricting the creative process. Source separation algorithms can separate a mixture into its respective components, which a user can adjust the levels and mix them back together. This two-step approach, however, still suffers from audible artifacts and motivates further work. In this work, we learn to remix music directly by re-purposing Conv-TasNet, a well-known source separation model, into two neural remixing architectures. We explicit a loss term that directly measures remix quality and jointly optimize it with a separation loss.
@@ -138,7 +143,7 @@
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
                 <!-- <strong class="mb-2">Audio Upmixing</strong> -->
-                <strong class="d-inline-block mb-2 text-primary">Latent Representation Learning</strong>
+                <p class="d-inline-block mb-2"><strong class="text-primary">Generative Model</strong> & <strong class="text-secondary"> Audio Upmixing</strong></p>
                 <h3 class="mb-0">Upmixing via Style Transfer: A Variational Autoencoder for
 Disentangling Spatial Images and Musical Content</h3>
                 <div class="mb-1 text-muted">Summer 2021 internship project</div>
@@ -157,8 +162,9 @@ Disentangling Spatial Images and Musical Content</h3>
         <div class="col-md-12">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-warning">Audio Coding</strong>
-                <h3 class="mb-0">Source-Aware Neural Audio Coding (SANAC)</h3>
+              	<p class="d-inline-block mb-2"><strong class="text-warning">Audio Coding</strong> & <strong class="text-success"> Source Separation</strong></p>
+                
+                <h3 class="mb-0"><a href="https://arxiv.org/abs/2008.12889" class="text-dark">Source-Aware Neural Audio Coding (SANAC)</a></h3>
                 <div class="mb-1 text-muted">Oct.2020 Accepted by ICASSP 2021</div>
 
                 <p class="card-text mb-auto">The intuition of the coding problem is to target the use case where source speech is observed as a mixture with background sound. It is to address the common situations, where people would like to know the environmental status of the speaker, even though they still pay the most attention to the speech content. We harmonized the source separation concept into the coding system, so that its encoder predicts the speech and noise code vectors defined in their own latent spaces
@@ -175,8 +181,8 @@ Disentangling Spatial Images and Musical Content</h3>
         <div class="col-md-12">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 grey">Speaker Recognition</strong>
-                <h3 class="mb-0">Non-local Convolutional Neural Network for Speaker Recognition</h3>
+                <strong class="d-inline-block mb-2 text-secondary">Speaker Recognition</strong>
+                <h3 class="mb-0"><a href="https://arxiv.org/pdf/2011.03682" class="text-dark">Non-local Convolutional Neural Network for Speaker Recognition</a></h3>
                 <div class="mb-1 text-muted">Summer 2022 internship project</div>
 
                 <p class="card-text mb-auto"> In the past few years, various convolutional neural network (CNN) based speaker recognition algorithms have been proposed and achieved satisfactory performance. However, convolutional operations are building blocks that typically perform on a local neighborhood at a time and thus miss to capturing global, long-range interactions at the feature level which are critical for understanding the pattern in a speaker’s voice. In this work, we propose to apply Non-local Convolutional Neural Networks (NLCNN) to improve the capability of capturing long-range dependencies at the feature level, therefore improving speaker recognition performance. 
@@ -202,7 +208,7 @@ Disentangling Spatial Images and Musical Content</h3>
           <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-primary">NLP · Visualization</strong>
+              	<p class="d-inline-block mb-2"><strong class="text-info">Visualization </strong> & <strong class="text-secondary">NLP</strong></p>
                 <h3 class="mb-0">Text Mining and Distant Reading on SongYuanXueAn</h3>
                 <div class="mb-1 text-muted">May.2018</div>
                 <p class="card-text mb-auto">This is a digital humanity project. Network analysis and word embedding was conducted on the text data extracted from an ancient chinese book - SongYuanXueAn.</p>
@@ -218,7 +224,7 @@ Disentangling Spatial Images and Musical Content</h3>
           <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-success">Knowledge Graph</strong>
+              	<p class="d-inline-block mb-2"><strong class="text-info">Visualization </strong> & <strong class="text-secondary">Knowledge Graph</strong></p>
                 <h3 class="mb-0">Knowledge Graph Construction of People In Song Dynasty</h3>
                 <div class="mb-1 text-muted">Apr.2017</div>
                 <p class="card-text mb-auto">I built a knowledge graph based on data from CBDB dataset. Feel free to explore scholars and politicians' social network in China a thousand years ago (from AC 900 to AC 1200) by clicking here.</p>
