--- a/resume.html
+++ b/resume.html
@@ -148,10 +148,10 @@
                     <p>[C-2] H. Yang, K. Zhen, S. Beack and M. Kim, "Source-Aware Neural Speech Coding for Noisy Speech Compression," ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2021 </p>
 
                     <p>[C-3] H. Yang, S. Firodiya, N.J. Bryan, M. Kim, Don’t Separate, Learn to Remix: End-to-End Neural Remixing with Joint Optimization. arXiv preprint arXiv: 2107.13634. 
-                    <br><em>‘Submitted to ICASSP 2022’</em></p>
+                    <br><em>‘Accepted by ICASSP 2022’</em></p>
 
                     <p>[C-4] H. Yang, S. Wager, S. Russell, M. Luo, M. Kim, W. Kim. Upmixing via Style Transfer: A Variational Autoencoder for Disentangling Spatial Images and Musical Content.  
-                    <br><em>‘Submitted to ICASSP 2022’</em></p>
+                    <br><em>‘Accepted by ICASSP 2022’</em></p>
 
 
                     <p>[C-5] <strong>Yang, H.</strong>, Mao, H., Li, R., Ju, C.J. and Elibol, O., 2020. Non-local convolutional neural networks (nlcnn) for speaker recognition. arXiv preprint arXiv:2011.03682.</p>
