--- a/researches.html
+++ b/researches.html
@@ -108,20 +108,18 @@
         <div class="col-md-12">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <p class="d-inline-block mb-2"><strong class="text-warning"> Audio Coding  </strong> & <strong class="text-primary">Generative Model</strong></p>
-                <!-- <ul class="list-inline d-inline-block mb-2">
-				  <li class="list-inline-item  text-warning"><b>Audio coding</b></li>
-				  <li class="list-inline-item">And another one.</li>
-				  <li class="list-inline-item">But they're displayed inline.</li>
-				</ul> -->
+                <p class="d-inline-block mb-3"><strong class="text-warning"> Audio Coding  </strong> & <strong class="text-primary">Generative Model</strong></p>
                 <h3 class="mb-0">Generative Predictive Codec</h3>
-                <div class="mb-1 text-muted">Ongoing </div>
-                <p class="card-text mb-auto">We are working on a generative predictive codec with low bitrate and low latency.</p>
-                <!-- <a href="#" class="stretched-link">More</a> --> 
+                <div class="mb-1 text-muted">Oct.2022 </div>
+                <p class="card-text mb-auto">Low and ultra-low-bitrate neural speech coding achieves unprecedented coding gain by generating speech signals from compact speech features. This paper introduces additional coding efficiency by reducing the temporal redundancy within the frame-level feature sequence. We leverage a recurrent neural predictor, which leads to low-entropy residual representations. Residual representations are discriminatively coded according to their contributions to reconstructing signals. Combining feature prediction and discriminative coding results in a dynamic bit-allocating algorithm that spends more bits on unpredictable but rare events. As a result, we develop a scalable, lightweight, low-latency, and low-bitrate neural speech coding system. The subjective tests show that our model achieves superior coding efficiency compared to LPCNet and Lyra V2 in the very low bitrates.</p>
+                <p><a href="https://arxiv.org/abs/2107.13634">[Paper]</a><a href="https://www.github.com/haiciyang/Remixing">[Code]</a><a href="https://saige.sice.indiana.edu/research-projects/remixing/">[Demo]  </a></p>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img class="bd-placeholder-img" width="260" height="400" src="figs/pred_coding1.png" alt="">
               </div>
             </div>
-        </div>
-
+          </div>
+        
         <div class="col-md-12">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
