--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> I was classically trained in piano and erhu, with performing experience in the traditional ensemble for 5+ years. My research interest mianly lies in understanding high-dimensional audio data with simpler representation and designing effiecient machine learning model for solving the audio related problems. 
-        <p> (Website last updated 11/2021)
+        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My research interest mianly lies in understanding high-dimensional audio data with simpler representation and designing effiecient machine learning model for solving the audio related problems. I was classically trained in piano and erhu, with performing experience in the traditional ensemble for 5+ years. 
+        <p> (Website last updated 11/2022)
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
