--- a/researches.html
+++ b/researches.html
@@ -112,7 +112,9 @@
                 <h3 class="mb-0">Generative Predictive Codec</h3>
                 <div class="mb-1 text-muted">Oct.2022 </div>
                 <p class="card-text mb-auto">Low and ultra-low-bitrate neural speech coding achieves unprecedented coding gain by generating speech signals from compact speech features. This paper introduces additional coding efficiency by reducing the temporal redundancy within the frame-level feature sequence. We leverage a recurrent neural predictor, which leads to low-entropy residual representations. Residual representations are discriminatively coded according to their contributions to reconstructing signals. Combining feature prediction and discriminative coding results in a dynamic bit-allocating algorithm that spends more bits on unpredictable but rare events. As a result, we develop a scalable, lightweight, low-latency, and low-bitrate neural speech coding system. The subjective tests show that our model achieves superior coding efficiency compared to LPCNet and Lyra V2 in the very low bitrates.</p>
-                <p><a href="https://arxiv.org/abs/2107.13634">[Paper]</a><a href="https://www.github.com/haiciyang/Remixing">[Code]</a><a href="https://saige.sice.indiana.edu/research-projects/remixing/">[Demo]  </a></p>
+                <p><a href="https://arxiv.org/pdf/2211.02506.pdf">[Paper]</a><a href="https://github.com/haiciyang/Feature-predictor-for-speech-codec">[Code]</a><a href=" https:
+//saige.sice.indiana.edu/research-projects/
+predictive-LPCNet.">[Samples]  </a></p>
               </div>
               <div class="col-auto d-none d-lg-block">
                 <img class="bd-placeholder-img" width="260" height="400" src="figs/pred_coding1.png" alt="">
