--- a/researches.html
+++ b/researches.html
@@ -111,7 +111,7 @@
               <div class="col p-4 d-flex flex-column position-static">
                 <p class="d-inline-block mb-3"><strong class="text-warning"> Audio Coding  </strong> & <strong class="text-primary">Generative Model</strong></p>
                 <h3 class="mb-0"><a href="https://arxiv.org/abs/2311.08330" class="text-dark">Generative De-Quantization for Neural Speech Codec via Latent Diffusion</a></h3>
-                <div class="mb-1 text-muted">Submitted to ICASSP 2024</div>
+                <div class="mb-1 text-muted">ICASSP 2024</div>
 
                 <p class="card-text mb-auto">In low-bitrate speech coding, end-to-end speech coding networks aim to learn compact yet expressive features and a powerful decoder in a single network. A challenging problem as such results in unwelcome complexity increase and inferior speech quality. In this paper, we propose to separate the representation learning and information reconstruction tasks. We leverage an end-to-end codec for learning low-dimensional discrete tokens and employ a latent diffusion model to de-quantize coded features into a high-dimensional continuous space, relieving the decoder's burden of de-quantizing and upsampling. To mitigate the issue of over-smooth generation, we introduce midway-infilling with less noise reduction and stronger conditioning. 
                 </p>
@@ -130,7 +130,7 @@
               <div class="col p-4 d-flex flex-column position-static">
                 <p class="d-inline-block mb-3"><strong class="text-warning"> Audio Coding  </strong> & <strong class="text-primary">Generative Model</strong></p>
                 <h3 class="mb-0"><a href="https://arxiv.org/abs/2211.02506" class="text-dark">Neural Feature Predictor for Low-Bitrate Speech Coding</a></h3>
-                <div class="mb-1 text-muted">Accepted by ICASSP 2023</div>
+                <div class="mb-1 text-muted">ICASSP 2023</div>
                 <p class="card-text mb-auto">Low and ultra-low-bitrate neural speech coding achieves unprecedented coding gain by generating speech signals from compact speech features. This paper introduces additional coding efficiency by reducing the temporal redundancy within the frame-level feature sequence. We leverage a recurrent neural predictor, which leads to low-entropy residual representations. Residual representations are discriminatively coded according to their contributions to reconstructing signals. Combining feature prediction and discriminative coding results in a dynamic bit-allocating algorithm that spends more bits on unpredictable but rare events. As a result, we develop a scalable, lightweight, low-latency, and low-bitrate neural speech coding system. The subjective tests show that our model achieves superior coding efficiency compared to LPCNet and Lyra V2 in the very low bitrates.</p>
                 <p><a href="https://arxiv.org/pdf/2211.02506.pdf">[Paper]</a><a href="https://github.com/haiciyang/Feature-predictor-for-speech-codec">[Code]</a><a href=" https:
 //saige.sice.indiana.edu/research-projects/
