--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hai·ts·jʌŋ)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My research interest mianly lies in understanding high-dimensional audio data with simpler representation and designing effiecient machine learning model for solving the audio related problems. I was classically trained in piano and erhu, with performing experience in the traditional ensemble for 5+ years. 
-        <p> (Website last updated 11/2022)
+        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My research interest is in understanding high-dimensional audio data with effective and efficient representation for solving the audio related problems. My recent works include speech coding, codec-based generation, speech enhancement and audio disentanglement.
+        <p> (Website last updated 07/2024)
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
@@ -187,12 +187,12 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-2 bg-warning">
+  <!-- <footer class="py-2 bg-warning">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Haici Yang's Website 2021</p>
     </div>
     <!-- /.container -->
-  </footer>
+  <!-- </footer> --> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
